[package]
name = "dive-deco-x86"
version = "0.1.0"
edition = "2021"

[dependencies]
libm = "0.2.11"
defmt = "0.3.10"
serde = { version = "1.0.216", features = ["derive"], optional = true }
serde_json = { version = "1.0.134", optional = true }

[dev-dependencies]
csv = "1.3.1"

[patch.crates-io]

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
std = []