[package]
name = "dive-computer-deco"
version = "0.1.0"
edition = "2024"

[dependencies]
libm = "0.2.11"
defmt = "0.3.10"
serde = { version = "1.0.216", features = ["derive"], optional = true }
serde_json = { version = "1.0.134", optional = true }

[dev-dependencies]
csv = "1.3.1"
rand = "0.9.0"
criterion = { version = "0.5", features = ["html_reports"] }
dive-deco = { version = "6.0.1", features = ["serde"] }
eframe = { version = "0.32", features = ["default_fonts", "glow"] }
egui_plot = { version = "0.33.0" }
egui_table = { version = "0.3.0" }
egui_taffy = { version = "0.8.1" }
egui = "0.32"
taffy = { version = "0.7.7", default-features = false, features = [
  "taffy_tree",
  "detailed_layout_info",
] }
fitparser = "0.10.0"
rfd = "0.14"

[patch.crates-io]

[features]
default = ["serde", "std"]
serde = ["dep:serde", "dep:serde_json"]
std = []


[[bench]]
name = "lib_benchmark"
harness = false

[profile.release]
debug = true
